--- a/book-es/book.tex
+++ b/book-es/book.tex
@@ -153,13 +153,6 @@ Allen Downey\\
 }
 
 
-\vspace{0.5in}
-
-{\Large Green Tea Press}
-
-{\small Needham, Massachusetts}
-
-%\includegraphics[width=1in]{figs/logo1.pdf}
 \vfill
 
 \end{flushright}
@@ -174,12 +167,6 @@ Copyright \copyright ~2015 Allen Downey.
 
 
 \vspace{0.2in}
-
-\begin{flushleft}
-Green Tea Press       \\
-9 Washburn Ave        \\
-Needham MA 02492
-\end{flushleft}
 
 Se concede permiso para copiar, distribuir y/o modificar este documento
 bajo los términos de la Creative Commons Attribution-NonCommercial
@@ -196,8 +183,6 @@ La fuente de \LaTeX\ para este libro está disponible en
 Título original: {\em Think Python: How to Think Like a Computer Scientist}
 
 Traducción de Jorge Espinoza.
-
-Corrección de Carlos Pardo.
 
 \vspace{0.2in}
 
@@ -448,8 +433,8 @@ ser cambiada a ``subconsciente''.
 numerosas correcciones y sugerencias al libro.
 
 \item Simon Dicon Montford informó sobre una definición de función faltante y
-muchos errores tipográficos en el Capítulo 3.  Además, encontró errores en la función {\tt increment}
-en el Capítulo 13.
+muchos errores tipográficos en el Capítulo 3.  Además, encontró errores en 
+la función {\tt increment} en el Capítulo 13.
 
 \item John Ouzts corrigió la definición de ``valor de retorno''
 en el Capítulo 3.
@@ -533,8 +518,8 @@ una corrección a {\tt printTime} y un buen error tipográfico.
 
 \item Ken encontró un puñado de errores en los Capítulos 8, 9 y 11.
 
-\item Ivo Wever encontró un error tipográfico en el Capítulo 5 y sugirió una aclaración
-en el Capítulo 3.
+\item Ivo Wever encontró un error tipográfico en el Capítulo 5 y sugirió
+una aclaración en el Capítulo 3.
 
 \item Curtis Yanko sugirió una aclaración en el Capítulo 2.
 
@@ -671,8 +656,8 @@ deletrear Jane Austen.
 
 \item Russell Coleman me ayudó con mi geometría.
 
-\item Nam Nguyen encontró un error tipográfico y advirtió que usé el patrón Decorator
-pero sin mencionar el nombre.
+\item Nam Nguyen encontró un error tipográfico y advirtió que usé el patrón 
+Decorator pero sin mencionar el nombre.
 
 \item St\'{e}phane Morin envió varias correcciones y sugerencias.
 
@@ -735,15 +720,17 @@ edición.
 
 \item Laurent Rosenfeld y Mihaela Rotaru tradujeron este libro al francés.  En el camino, me enviaron muchas correcciones y sugerencias.
 
+\item Jorge Espinoza es el autor de esta traducción del libro al castellano.
+
+\item Carlos Félix Pardo Martín ha realizado numerosas correcciones al libro traducido al castellano.
+
 % ENDCONTRIB
 
-Adicionalmente, las personas que vieron errores tipográficos o hicieron correcciones incluyen a
-Czeslaw Czapla, Dale Wilson, Francesco Carlo Cimini,
+Adicionalmente, las personas que vieron errores tipográficos o hicieron
+correcciones incluyen a Czeslaw Czapla, Dale Wilson, Francesco Carlo Cimini,
 Richard Fursa, Brian McGhie, Lokesh Kumar Makani, Matthew Shultz, Viet
 Le, Victor Simeone, Lars O.D. Christensen, Swarup Sahoo, Alix Etienne,
 Kuang He, Wei Huang, Karen Barber y Eric Ransom.
-
-
 
 
 \end{itemize}
