--- a/book-es/book.tex
+++ b/book-es/book.tex
@@ -722,7 +722,10 @@ edición.
 
 \item Jorge Espinoza es el autor de esta traducción del libro al castellano.
 
-\item Carlos Félix Pardo Martín ha realizado numerosas correcciones al libro traducido al castellano.
+\item Carlos Félix Pardo Martín ha realizado numerosas correcciones y
+modificaciones menores al libro traducido al castellano.
+La lista completa de modificaciones puede leerse en
+\url{https://github.com/picuino/ThinkPython2/blob/master/README.md#modificaciones}
 
 % ENDCONTRIB
 
